--- a/application/pom.xml
+++ b/application/pom.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.siani.teseo</groupId>
-	<artifactId>application</artifactId>
+    <groupId>org.siani.teseo</groupId>
+    <artifactId>application</artifactId>
     <version>1.0.0</version>
 
     <properties>
@@ -44,6 +45,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>LATEST</version>
+        </dependency>
+        <dependency>
             <groupId>org.siani.tara</groupId>
             <artifactId>proteo</artifactId>
             <version>1.4.1-SNAPSHOT</version>
@@ -61,6 +67,12 @@
         <dependency>
             <groupId>org.siani.teseo</groupId>
             <artifactId>server</artifactId>
+            <version>[1.0.0, 2.0.0)</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.siani.teseo</groupId>
+            <artifactId>scheduler</artifactId>
             <version>[1.0.0, 2.0.0)</version>
             <scope>test</scope>
         </dependency>
