--- a/plugin/teseo/META-INF/plugin.xml
+++ b/plugin/teseo/META-INF/plugin.xml
@@ -9,8 +9,9 @@
     ]]></description>
 
     <change-notes><![CDATA[
-      1.1.0
+      1.0.0
         - Support of modules with no tara facet
+        - Support of jmx protocol
     ]]>
     </change-notes>
 
