--- a/accessor/pom.xml
+++ b/accessor/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.siani.teseo</groupId>
-    <artifactId>accessor-java</artifactId>
+    <artifactId>rest-accessor-java</artifactId>
     <version>1.0.0</version>
 
     <properties>
@@ -113,7 +113,7 @@
         </dependency>
         <dependency>
             <groupId>org.siani.teseo</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>rest-core</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
