--- a/plugin/teseo/META-INF/plugin.xml
+++ b/plugin/teseo/META-INF/plugin.xml
@@ -29,9 +29,9 @@
         <action id="NewTeseoFile" class="org.siani.teseo.plugin.actions.CreateTeseoFileAction">
             <add-to-group group-id="NewGroup" anchor="first"/>
         </action>
-        <action id="CreateTeseoAPI" class="org.siani.teseo.plugin.actions.CreateServerAction"
-                text="Create Teseo Actions"
-                description="Create Teseo Actions">
+        <action id="CreateTeseoAPI" class="org.siani.teseo.plugin.actions.CreateServicesAction"
+                text="Create Teseo Services"
+                description="Create Teseo Services">
             <keyboard-shortcut keymap="$default" first-keystroke="control alt R"/>
             <add-to-group group-id="ToolsMenu" anchor="last"/>
         </action>
