--- a/application/pom.xml
+++ b/application/pom.xml
@@ -66,7 +66,7 @@
         </dependency>
         <dependency>
             <groupId>org.siani.teseo</groupId>
-            <artifactId>server</artifactId>
+            <artifactId>rest-server</artifactId>
             <version>[1.0.0, 2.0.0)</version>
             <scope>test</scope>
         </dependency>
