--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.siani.teseo</groupId>
-    <artifactId>rest-core</artifactId>
+    <artifactId>core</artifactId>
     <version>1.0.0</version>
 
     <properties>
