--- a/core/pom.xml
+++ b/core/pom.xml
@@ -83,7 +83,7 @@
         <dependency>
             <groupId>org.siani.cottons</groupId>
             <artifactId>cotton-utils</artifactId>
-            <version>LATEST</version>
+            <version>1.0.7</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
