--- a/ide/pandora-plugin-core/pom.xml
+++ b/ide/pandora-plugin-core/pom.xml
@@ -14,6 +14,7 @@
         <tara.dsl>Proteo</tara.dsl>
         <tara.dsl.version>LATEST</tara.dsl.version>
         <tara.out.dsl>Pandora</tara.out.dsl>
+        <tara.out.dsl.version>1.0.0</tara.out.dsl.version>
         <tara.working.package>io.intino.pandora.plugin</tara.working.package>
     </properties>
 
@@ -56,8 +57,8 @@
         </dependency>
         <dependency>
             <groupId>org.siani.tara</groupId>
-            <artifactId>proteo</artifactId>
-            <version>1.4.1-SNAPSHOT</version>
+            <artifactId>proteo-alone</artifactId>
+            <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>org.siani.itrules</groupId>
