--- a/ide/pandora-plugin-core/pom.xml
+++ b/ide/pandora-plugin-core/pom.xml
@@ -156,5 +156,11 @@
             <version>LATEST</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.siani.tara</groupId>
+            <artifactId>language</artifactId>
+            <version>LATEST</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
