--- a/ide/pandora-plugin-core/pom.xml
+++ b/ide/pandora-plugin-core/pom.xml
@@ -99,9 +99,9 @@
         </dependency>
         <!--SLACK-->
         <dependency>
-            <groupId>com.github.Ullink</groupId>
-            <artifactId>simple-slack-api</artifactId>
-            <version>0.5.1</version>
+            <groupId>com.ullink.slack</groupId>
+            <artifactId>simpleslackapi</artifactId>
+            <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>io.intino.pandora</groupId>
