--- a/server/pom.xml
+++ b/server/pom.xml
@@ -84,6 +84,11 @@
             <artifactId>bcprov-jdk15</artifactId>
             <version>1.45</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.1</version>
+        </dependency>
     </dependencies>
 
 </project>
