--- a/ide/pandora-plugin-core/pom.xml
+++ b/ide/pandora-plugin-core/pom.xml
@@ -107,7 +107,7 @@
         <dependency>
             <groupId>io.intino.pandora</groupId>
             <artifactId>rest-server</artifactId>
-            <version>1.0.0</version>
+            <version>[1.0.0, 2.0.0)</version>
             <scope>test</scope>
         </dependency>
         <dependency>
