--- a/ide/pandora-plugin/META-INF/plugin.xml
+++ b/ide/pandora-plugin/META-INF/plugin.xml
@@ -37,6 +37,11 @@
             <keyboard-shortcut keymap="$default" first-keystroke="control alt A"/>
             <add-to-group group-id="ToolsMenu" anchor="last"/>
         </action>
+        <action id="Create Web Client" class="io.intino.pandora.plugin.actions.CreateActivityAccessorAction"
+                text="Create Activity Accessor"
+                description="Creates UI accessor in a web module">
+            <add-to-group group-id="ToolsMenu" anchor="last"/>
+        </action>
     </actions>
     <application-components>
         <component>
