--- a/jms/pom.xml
+++ b/jms/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.intino.pandora</groupId>
-    <artifactId>jms</artifactId>
+    <artifactId>pandora-jms</artifactId>
     <version>1.0.1</version>
 
     <properties>
@@ -69,7 +69,7 @@
     <dependencies>
         <dependency>
             <groupId>io.intino.pandora</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>pandora-core</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
