--- a/jmx/pom.xml
+++ b/jmx/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.intino.pandora</groupId>
-    <artifactId>jmx</artifactId>
+    <artifactId>pandora-jmx</artifactId>
     <version>1.0.0</version>
 
     <properties>
