--- a/scheduler/pom.xml
+++ b/scheduler/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.intino.pandora</groupId>
-    <artifactId>scheduler</artifactId>
+    <artifactId>pandora-scheduler</artifactId>
     <version>1.0.0</version>
 
     <properties>
