--- a/server/pom.xml
+++ b/server/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.intino.pandora</groupId>
-    <artifactId>rest-server</artifactId>
+    <artifactId>pandora-server</artifactId>
     <version>1.1.0</version>
 
     <properties>
@@ -44,7 +44,7 @@
     <dependencies>
         <dependency>
             <groupId>io.intino.pandora</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>pandora-core</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
