removed old plugin Fixed errors in ui templates. Updated box and configuration templates. updated manifest

--- a/ide/pandora-plugin/res/pandora.toml
+++ b/ide/pandora-plugin/res/pandora.toml
@@ -21,7 +21,7 @@ id="CreatePandoraAPI"
 aClass="io.intino.pandora.plugin.actions.CreatePandoraBoxAction"
 text="Create Pandora Shell"
 description="Create Pandora Shell"
-keyboard-shortcut="control alt S"
+shortcut="control alt S"
 groupId="PandoraToolsGroup"
 
 [[actions]]
@@ -29,5 +29,5 @@ id="Publish Client"
 aClass="io.intino.pandora.plugin.actions.PublishAccessorAction"
 text="Publish Pandora Accessor"
 description="Publish Pandora Accessor in Artifactory"
-keymap="control alt A"
+shortcut="control alt A"
 groupId="PandoraToolsGroup"
