--- a/ide/pandora-plugin/pom.xml
+++ b/ide/pandora-plugin/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>io.intino.pandora</groupId>
     <artifactId>pandora-plugin</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -16,12 +16,25 @@
         <tara.out.dsl>Pandora</tara.out.dsl>
         <tara.out.dsl.version>1.0.0</tara.out.dsl.version>
         <tara.working.package>io.intino.pandora.plugin</tara.working.package>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <build>
         <outputDirectory>../../out/production/pandora-plugin</outputDirectory>
         <testOutputDirectory>../../out/test/pandora-plugin</testOutputDirectory>
         <directory>../../out/build/pandora-plugin</directory>
+        <!--<testSourceDirectory>test</testSourceDirectory>-->
+        <sourceDirectory>src</sourceDirectory>
+        <resources>
+            <resource>
+                <directory>res</directory>
+            </resource>
+        </resources>
+        <testResources>
+            <testResource>
+                <directory>test-res</directory>
+            </testResource>
+        </testResources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -36,9 +49,28 @@
                         <configuration>
                             <artifactSet>
                                 <includes>
-                                    <include>tara.dsl:pandora:*</include>
+                                    <include>tara.dsl:pandora</include>
                                 </includes>
                             </artifactSet>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.7</version>
+                <executions>
+                    <execution>
+                        <id>add-source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>gen</source>
+                            </sources>
                         </configuration>
                     </execution>
                 </executions>
@@ -65,9 +97,9 @@
 
     <distributionManagement>
         <repository>
-            <id>siani-maven</id>
-            <name>siani-maven-releases</name>
-            <url>https://artifactory.siani.es/artifactory/libs-release-local</url>
+            <id>intino-maven</id>
+            <name>intino-maven-releases</name>
+            <url>https://artifactory.intino.io/artifactory/release-builders</url>
         </repository>
     </distributionManagement>
 
