--- a/server/pom.xml
+++ b/server/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.intino.pandora</groupId>
     <artifactId>pandora-server</artifactId>
-    <version>1.1.1</version>
+    <version>1.1.2</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -39,6 +39,7 @@
         <outputDirectory>../out/production/server</outputDirectory>
         <testOutputDirectory>../out/test/server</testOutputDirectory>
         <directory>../out/build/server</directory>
+        <sourceDirectory>src</sourceDirectory>
     </build>
 
     <dependencies>
