--- a/ide/pandora-plugin-core/pom.xml
+++ b/ide/pandora-plugin-core/pom.xml
@@ -12,7 +12,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <tara.level>Application</tara.level>
         <tara.dsl>Proteo</tara.dsl>
-        <tara.dsl.version>LATEST</tara.dsl.version>
+        <tara.dsl.version>1.0.0</tara.dsl.version>
         <tara.out.dsl>Pandora</tara.out.dsl>
         <tara.working.package>io.intino.pandora.model</tara.working.package>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
