--- a/slack/pom.xml
+++ b/slack/pom.xml
@@ -2,39 +2,39 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>io.intino.pandora</groupId>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>io.intino.pandora</groupId>
     <artifactId>pandora-slack</artifactId>
-  <version>1.0.0</version>
+    <version>1.0.0</version>
 
-  <distributionManagement>
-    <repository>
-      <id>siani-maven</id>
-      <name>siani-maven-releases</name>
-      <url>https://artifactory.siani.es/artifactory/libs-release-local</url>
-    </repository>
-  </distributionManagement>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.5.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-          <optimize>true</optimize>
-          <debug>true</debug>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+    <distributionManagement>
+        <repository>
+            <id>intino-maven</id>
+            <name>intino-maven-releases</name>
+            <url>https://artifactory.intino.io/artifactory/release-libraries</url>
+        </repository>
+    </distributionManagement>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <optimize>true</optimize>
+                    <debug>true</debug>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-  <dependencies>
-    <dependency>
-      <groupId>com.ullink.slack</groupId>
-      <artifactId>simpleslackapi</artifactId>
-      <version>LATEST</version>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>com.ullink.slack</groupId>
+            <artifactId>simpleslackapi</artifactId>
+            <version>LATEST</version>
+        </dependency>
+    </dependencies>
 </project>
