--- a/ide/pandora-test/pom.xml
+++ b/ide/pandora-test/pom.xml
@@ -2,10 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>io.intino.pandora</groupId>
     <artifactId>pandora-builder-test</artifactId>
-    <version>1.0.14</version>
+    <version>1.0.0</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -20,118 +19,22 @@
     </properties>
 
     <build>
-        <outputDirectory>../../out/production/pandora-plugin</outputDirectory>
-        <testOutputDirectory>../../out/test/pandora-plugin</testOutputDirectory>
-        <directory>../../out/build/pandora-plugin</directory>
-        <!--<sourceDirectory>src</sourceDirectory>-->
-        <!--<testResources>-->
-        <!--<testResource>-->
-        <!--<directory>test-res</directory>-->
-        <!--</testResource>-->
-        <!--</testResources>-->
-        <plugins>
-            <plugin>
-                <artifactId>maven-clean-plugin</artifactId>
-                <version>3.0.0</version>
-                <configuration>
-                    <excludeDefaultDirectories>true</excludeDefaultDirectories>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>auto-clean</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>clean</goal>
-                        </goals>
-                        <configuration>
-                            <filesets>
-                                <fileset>
-                                    <directory>${basedir}/test-gen</directory>
-                                </fileset>
-                            </filesets>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>2.4.3</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <minimizeJar>false</minimizeJar>
-                            <artifactSet>
-                                <includes>
-                                    <include>tara.dsl:pandora:*</include>
-                                    <include>io.intino.pandora:pandora-model:jar:*</include>
-                                </includes>
-                            </artifactSet>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <version>1.7</version>
-                <executions>
-                    <execution>
-                        <id>add-source</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>add-source</goal>
-                        </goals>
-                        <configuration>
-                            <sources>
-                                <source>gen</source>
-                            </sources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
+        <outputDirectory>../../out/production/pandora-builder-test</outputDirectory>
+        <testOutputDirectory>../../out/test/pandora-builder-test</testOutputDirectory>
+        <directory>../../out/build/pandora-builder-test</directory>
     </build>
-    <repositories>
-        <repository>
-            <id>siani-maven</id>
-            <name>siani-maven-releases</name>
-            <url>http://artifactory.siani.es/artifactory/libs-release</url>
-        </repository>
-        <repository>
-            <id>siani-maven-snapshot</id>
-            <name>siani-maven-snapshot</name>
-            <url>http://artifactory.siani.es/artifactory/libs-snapshot</url>
-        </repository>
-        <repository>
-            <id>siani-maven-language</id>
-            <name>siani-maven-language</name>
-            <url>http://artifactory.siani.es/artifactory/languages-release</url>
-        </repository>
-    </repositories>
-
-    <distributionManagement>
-        <repository>
-            <id>intino-maven</id>
-            <name>intino-maven-releases</name>
-            <url>https://artifactory.intino.io/artifactory/release-builders</url>
-        </repository>
-    </distributionManagement>
 
     <dependencies>
         <dependency>
             <groupId>io.intino.pandora</groupId>
-            <artifactId>pandora-model</artifactId>
-            <version>${project.version}</version>
+            <artifactId>pandora-plugin</artifactId>
+            <scope>test</scope>
+            <version>1.0.14</version>
         </dependency>
         <dependency>
-            <groupId>tara.dsl</groupId>
-            <artifactId>pandora</artifactId>
-            <version>${project.version}</version>
+            <groupId>io.intino.pandora</groupId>
+            <artifactId>pandora-model</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
@@ -144,31 +47,31 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <scope>provided</scope>
+            <scope>test</scope>
             <version>2.7</version>
         </dependency>
         <dependency>
             <groupId>org.siani.tara</groupId>
             <artifactId>proteo-alone</artifactId>
-            <scope>provided</scope>
+            <scope>test</scope>
             <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.siani.tara</groupId>
             <artifactId>language</artifactId>
-            <scope>provided</scope>
+            <scope>test</scope>
             <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>org.siani.itrules</groupId>
             <artifactId>itrules</artifactId>
-            <scope>provided</scope>
+            <scope>test</scope>
             <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.shared</groupId>
             <artifactId>maven-invoker</artifactId>
-            <scope>provided</scope>
+            <scope>test</scope>
             <version>2.0.11</version>
         </dependency>
 
